# lox

./: CMakeLists.txt  readme.md  syntax.bnf
.github/workflows/: linux.yml  windows.yml
data/cmake/: Sanitizers.cmake
data/editors/vscode/: CHANGELOG.md  README.md  package.json
data/editors/vscode/syntaxes/: lox.tmLanguage.json
examples/: CMakeLists.txt  lax.main.cc  lox.main.cc
src/: CMakeLists.txt
src/lax/: ast.cc  ast.h  chunk.cc  chunk.h  config.h  debug.cc  debug.h  environment.cc  environment.h  errorhandler.cc  errorhandler.h  generate_ast.cc  interpreter.cc  interpreter.h  interpreter.test.cc  lax.cc  lax.h  lax.test.cc  object.cc  object.h  parser.cc  parser.h  parser.test.cc  pch.public.h  printhandler.cc  printhandler.h  program.cc  program.h  resolver.cc  resolver.h  scanner.cc  scanner.h  source.cc  source.h  test.cc  test.h  token.cc  token.h  tokentype.h
src/lox/: ast.cc  ast.h  cint.cc  cint.h  config.h  enviroment.cc  enviroment.h  environment.cc  environment.h  errorhandler.cc  errorhandler.h  generate_ast.cc  interpreter.cc  interpreter.h  interpreter.test.cc  ints.h  lox.cc  lox.h  lox.test.cc  object.cc  object.h  offset.h  parser.cc  parser.h  parser.test.cc  pch.public.h  printhandler.cc  printhandler.h  program.cc  program.h  resolver.cc  resolver.h  scanner.cc  scanner.h  source.cc  source.h  stringmap.cc  stringmap.h  test.cc  test.h  (+3 more)
